--- a/portfolio-frontend/src/index.css
+++ b/portfolio-frontend/src/index.css
@@ -58,29 +58,29 @@ h1 {
     margin: 0;
 
     font-family: var(--main-font);
-    font-size: 6rem;
-    line-height: 6rem;
+    /* font-size: 6rem; */
+    /* line-height: 6rem; */
     color: var(--light-txt);
 }
 
 @media (max-width: 640px) {
     h1 {
-        font-size: 3rem;
-        line-height: 3rem;
+        /* font-size: 3rem; */
+        /* line-height: 3rem; */
     }
 }
 
 @media (max-width: 768px) {
     h1 {
-        font-size: 3.5rem;
-        line-height: 4rem;
+        /* font-size: 3.5rem; */
+        /* line-height: 4rem; */
     }
 }
 
 @media (max-width: 1024px) {
     h1 {
-        font-size: 4rem;
-        line-height: 4.5rem;
+        /* font-size: 4rem; */
+        /* line-height: 4.5rem; */
     }
 }
 
@@ -88,8 +88,8 @@ h2 {
     margin: 0;
 
     font-family: var(--main-font);
-    font-size: 5rem;
-    line-height: 5rem;
+    /* font-size: 5rem; */
+    /* line-height: 5rem; */
     color: var(--light-txt);
 }
 
@@ -97,8 +97,8 @@ h3 {
     margin: 0;
 
     font-family: var(--main-font);
-    font-size: 4rem;
-    line-height: 4rem;
+    /* font-size: 4rem; */
+    /* line-height: 4rem; */
     color: var(--light-txt);
 }
 
@@ -106,8 +106,8 @@ h4 {
     margin: 0;
 
     font-family: var(--body-font);
-    font-size: 3rem;
-    line-height: 3rem;
+    /* font-size: 3rem; */
+    /* line-height: 3rem; */
     color: var(--light-txt);
 }
 
@@ -115,8 +115,8 @@ h5 {
     margin: 0;
 
     font-family: var(--body-font);
-    font-size: 2.5rem;
-    line-height: 2.5rem;
+    /* font-size: 2.5rem; */
+    /* line-height: 2.5rem; */
     color: var(--light-txt);
 }
 
@@ -124,8 +124,8 @@ h6 {
     margin: 0;
 
     font-family: var(--body-font);
-    font-size: 2rem;
-    line-height: 2rem;
+    /* font-size: 2rem; */
+    /* line-height: 2rem; */
     color: var(--light-txt);
 }
 
